fix template